add OneTimeTokenProvider and change-password endpoint